--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>My Garden</title>
+    <title>我的花园世界</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -75,13 +75,12 @@
 
         <!-- 浮动提示信息 -->
         <div id="toast-container"></div>
-    </div>
 
-    <!-- 脚本引用 -->
-    <!-- 剧情记录按钮 -->
-    <button id="btn-story-record" class="story-btn">
-        📖 剧情记录
-    </button>
+        <!-- 剧情记录按钮 -->
+        <button id="btn-story-record" class="story-btn">
+            📖 剧情记录
+        </button>
+    </div>
 
     <!-- 剧情记录界面 -->
     <div id="story-record-container" class="story-record-container hidden">
